--- a/ScrolViewDogs/Base.lproj/Main.storyboard
+++ b/ScrolViewDogs/Base.lproj/Main.storyboard
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11201" systemVersion="15G31" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11161"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="ScrolViewDogs" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +17,38 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="bg" translatesAutoresizingMaskIntoConstraints="NO" id="YXh-0F-wtR"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="1aW-by-IgF">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="667" id="FNW-rI-iep"/>
+                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="260" id="PIA-W3-cNS"/>
+                                    <constraint firstAttribute="width" constant="260" id="clp-wV-KN0"/>
+                                </constraints>
+                            </scrollView>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="YXh-0F-wtR" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="7WA-P1-PSF"/>
+                            <constraint firstItem="1aW-by-IgF" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="93P-Q8-Tfo"/>
+                            <constraint firstItem="1aW-by-IgF" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="OFI-hu-rbN"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="YXh-0F-wtR" secondAttribute="bottom" id="OO3-5L-wTk"/>
+                            <constraint firstItem="1aW-by-IgF" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="UIt-8N-Tcv"/>
+                            <constraint firstItem="YXh-0F-wtR" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="hhq-o9-TvN"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="1aW-by-IgF" secondAttribute="bottom" id="vK8-BD-4SW"/>
+                            <constraint firstAttribute="trailing" secondItem="YXh-0F-wtR" secondAttribute="trailing" id="wcD-Mq-WU9"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="scrolView" destination="1aW-by-IgF" id="QKm-yS-Ynz"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="136.80000000000001" y="138.98050974512745"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="bg" width="2880" height="1800"/>
+    </resources>
 </document>
